<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="alasSegitiga"
            type="Double" />

        <variable
            name="tinggiSegitiga"
            type="Double" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SegitigaFragment">

        <EditText
            android:id="@+id/et_alas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alas"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:inputType="number"
            />
        <EditText
            android:id="@+id/et_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tinggi"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_alas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:inputType="number" />
        <Button
            android:id="@+id/btn_hitungsegitiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_tinggi"
            app:layout_constraintStart_toStartOf="@id/et_tinggi"
            android:text="@string/hitung_segitiga"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/tv_luassegitiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas"
            app:layout_constraintTop_toBottomOf="@id/btn_hitungsegitiga"
            app:layout_constraintStart_toStartOf="@id/btn_hitungsegitiga"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/black"
            android:layout_marginStart="15dp" />
        <TextView
            android:id="@+id/tv_kelilingsegitiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keliling"
            app:layout_constraintTop_toBottomOf="@id/tv_luassegitiga"
            app:layout_constraintStart_toStartOf="@id/tv_luassegitiga"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintTop_toBottomOf="@id/tv_kelilingsegitiga"
            app:layout_constraintStart_toStartOf="@id/btn_hitungsegitiga"
            android:layout_marginTop="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
