<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="panjangPersegiPanjang"
            type="Integer" />

        <variable
            name="lebarPersegiPanjang"
            type="Integer" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PersegiPanjangFragment">


        <EditText
            android:id="@+id/et_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/panjang"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:inputType="number"
            />
        <EditText
            android:id="@+id/et_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lebar"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_panjang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:inputType="number" />
        <Button
            android:id="@+id/btn_hitungpersegipanjang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_lebar"
            app:layout_constraintStart_toStartOf="@id/et_lebar"
            android:text="@string/hitung"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/tv_luaspersegipanjang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas"
            app:layout_constraintTop_toBottomOf="@id/btn_hitungpersegipanjang"
            app:layout_constraintStart_toStartOf="@id/btn_hitungpersegipanjang"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/black"
            android:layout_marginStart="15dp" />
        <TextView
            android:id="@+id/tv_kelilingpersegipanjang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keliling"
            app:layout_constraintTop_toBottomOf="@id/tv_luaspersegipanjang"
            app:layout_constraintStart_toStartOf="@id/tv_luaspersegipanjang"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintTop_toBottomOf="@id/tv_kelilingpersegipanjang"
            app:layout_constraintStart_toStartOf="@id/btn_hitungpersegipanjang"
            android:layout_marginTop="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
