<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutFragment">

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/tv_kelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nim"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/black"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
